# dogChat

./: .gitignore
client/: client.pro
client/chat_client/: Global.h  appinit.cpp  appinit.h  chat_client.pro  global.h  main.cpp  pch.h  qrc.qrc
client/chat_client/res/emoji/: emoji.txt
client/chat_client/res/qss/: StyleSheet.css
client/chat_client/storage/include/: storagemanager.h
client/chat_client/storage/src/: storagemanager.cpp
client/chat_client/tcp/include/: tcpclient.h
client/chat_client/tcp/src/: tcpclient.cpp
client/chat_client/util/include/: util.h
client/chat_client/util/src/: util.cpp
client/chat_client/widgets/include/: applyfrienddialog.h  chatlistitem.h  chatlistwidget.h  chatmsgitem.h  chatwidget.h  chooseemojiwidget.h  controlwidget.h  filemsgwidget.h  finduserwidget.h  friendinfowidget.h  friendlistitem.h  friendlistwidget.h  loginwnd.h  mainwnd.h  newfriendsitem.h  newfriendswidget.h
client/chat_client/widgets/src/: applyfrienddialog.cpp  chatlistitem.cpp  chatlistwidget.cpp  chatmsgitem.cpp  chatwidget.cpp  chooseemojiwidget.cpp  controlwidget.cpp  filemsgwidget.cpp  finduserwidget.cpp  (+7 more)
server/: CMakeLists.txt
server/config/: config.json
server/sql/: CreateDB.sql  DeleteDB.sql
server/src/: main.cpp
server/src/config/: Config.cpp  Config.h
server/src/dao/: MySQLDao.cpp  MySQLDao.h
server/src/pool/: IOContextPool.cpp  IOContextPool.h  MySQLPool.cpp  MySQLPool.h
server/src/tcp/: LogicSystem.cpp  LogicSystem.h  Message.cpp  Message.h  Server.cpp  Server.h  Session.cpp  Session.h
server/src/util/: Util.cpp  Util.h
(+16 files in other folders)
